--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
+input,
+textarea,
+select {
+  color-scheme: dark;
+}
